added miterm .csv

--- a/weekly material/week_8/group_summarize.Rmd
+++ b/weekly material/week_8/group_summarize.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Group and Summarize Notebook"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 ```{r}
@@ -41,29 +43,29 @@ flights_mean_delay <- flights %>%
 
 # How to deal with complexity
 
-
-covid_raw_best_date_f <- cases %>%
-  select(date = best_date, cases, deaths, location_level, location) %>%
-  arrange(location, date) %>%
-  group_by(location, date) %>%
-  calculate_sum(., "cases", "cases_new_best_date", cumulative = FALSE) %>%
-  calculate_sum(., "deaths", "deaths_new_best_date", cumulative = FALSE) %>%
-  select(-c(cases,deaths)) %>%
-  distinct()%>%
-  full_join(cases_best_shell,by=c("location_level","location","date")) %>%
-  replace_na(list(cases_new_best_date= 0, deaths_new_best_date = 0)) %>%
-  # bridge_location_pop(.) %>%
-  arrange(location,date) %>%
-  group_by(location) %>%
-  calculate_sum(., "cases_new_best_date", "cases_cumulative_best_date", cumulative = TRUE) %>%
-  calculate_sum(., "deaths_new_best_date", "deaths_cumulative_best_date", cumulative = TRUE) %>%
-  select(location_level, location, date, cases_new_best_date, deaths_new_best_date, cases_cumulative_best_date, deaths_cumulative_best_date) %>%
-  filter(date>as_date("2020-01-01") & date<cases_file_date & !is.na(location) & location != "Unassigned") %>%
-  pivot_longer(
-    cols = c("cases_new_best_date","deaths_new_best_date","cases_cumulative_best_date","deaths_cumulative_best_date"),
-    names_to = "variable",
-    values_to = "value"
-  )
+# 
+# covid_raw_best_date_f <- cases %>%
+#   select(date = best_date, cases, deaths, location_level, location) %>%
+#   arrange(location, date) %>%
+#   group_by(location, date) %>%
+#   calculate_sum(., "cases", "cases_new_best_date", cumulative = FALSE) %>%
+#   calculate_sum(., "deaths", "deaths_new_best_date", cumulative = FALSE) %>%
+#   select(-c(cases,deaths)) %>%
+#   distinct()%>%
+#   full_join(cases_best_shell,by=c("location_level","location","date")) %>%
+#   replace_na(list(cases_new_best_date= 0, deaths_new_best_date = 0)) %>%
+#   # bridge_location_pop(.) %>%
+#   arrange(location,date) %>%
+#   group_by(location) %>%
+#   calculate_sum(., "cases_new_best_date", "cases_cumulative_best_date", cumulative = TRUE) %>%
+#   calculate_sum(., "deaths_new_best_date", "deaths_cumulative_best_date", cumulative = TRUE) %>%
+#   select(location_level, location, date, cases_new_best_date, deaths_new_best_date, cases_cumulative_best_date, deaths_cumulative_best_date) %>%
+#   filter(date>as_date("2020-01-01") & date<cases_file_date & !is.na(location) & location != "Unassigned") %>%
+#   pivot_longer(
+#     cols = c("cases_new_best_date","deaths_new_best_date","cases_cumulative_best_date","deaths_cumulative_best_date"),
+#     names_to = "variable",
+#     values_to = "value"
+#   )
 
 ```
 
