--- a/weekly material/week_11/joins.Rmd
+++ b/weekly material/week_11/joins.Rmd
@@ -11,19 +11,25 @@ library(tidyr)
 library(dplyr)
 library(stringr)
 
-demog <- fread("~/data/CAp3_2020_demographics.csv") %>%
+demog <- fread("data/CAp3_2020_demographics.csv") %>%
   select(year, age, gender, race_ethnicity, county, pop, caloes_region, econ_reg) %>%
-  group_by(county) %>%
+  group_by(county, year) %>%
   summarize(total_pop = sum(pop))
 
-oshpd_payers <- fread("~/PHW290_dev.git/midterm/inpatient_payer_ca.csv") %>%
+oshpd_payers <- fread("../../midterm/inpatient_payer_ca.csv") %>%
   rename_all(. %>% tolower %>% gsub(" ", "_", .) %>% gsub("/", "_", .)) %>%
   mutate(county_name = str_to_title(county_name)) %>%
   as_tibble() %>%
   group_by(county_name, year) %>%
   summarize(total_patients = replace_na(sum(count), 0))
 
-inner_joined <- inner_join(oshpd_payers, demog, by = c("county_name" = "county", "osphd_year" = "year")) %>%
+inner_joined <- inner_join(oshpd_payers, demog, 
+                           by = c("county_name" = "county")) %>%
+  mutate(visit_per_capita = total_patients / total_pop)
+
+# empty since years don't match
+inner_joined2 <- inner_join(oshpd_payers, demog, 
+                           by = c("county_name" = "county",  "year")) %>%
   mutate(visit_per_capita = total_patients / total_pop)
 
 left_joined <- left_join(oshpd_payers, demog, by=c("county_name" = "county")) %>%
@@ -45,7 +51,7 @@ left_joined <- oshpd_payers %>%
   left_join(., demog, by=c("county_name" = "county")) 
 
 
-demog_2010_20 <- fread("~/data/DOFP3_2010_2020_demo.csv")
+demog_2010_20 <- fread("data/DOFP3_2010_2020_demo.csv")
 
 left_joined <- oshpd_payers %>%
   left_join(., demog_2010_20, by=c("county_name" = "county", "year" = "year"))  %>%
