--- a/weekly material/week_11/pivot.Rmd
+++ b/weekly material/week_11/pivot.Rmd
@@ -15,13 +15,13 @@ library(tidyr)
 library(dplyr)
 library(stringr)
 
-demog_2010_20 <- fread("~/data/DOFP3_2010_2020_demo.csv")
+demog_2010_20 <- fread("data/DOFP3_2010_2020_demo.csv")
 
 pivot_example <- demog_2010_20 %>%
   pivot_wider(names_from = "year", names_prefix = "year_", values_from = dof_pop)
 
 
-oshpd_payers <- fread("~/PHW290_dev.git/midterm/inpatient_payer_ca.csv") %>%
+oshpd_payers <- fread("../../midterm/inpatient_payer_ca.csv") %>%
   rename_all(. %>% tolower %>% gsub(" ", "_", .) %>% gsub("/", "_", .)) %>%
   mutate(county_name = str_to_title(county_name)) %>%
   as_tibble()
